parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> declaracionesYsentencias program
Rule 2     program -> funcion program
Rule 3     program -> <empty>
Rule 4     declaracionesYsentencias -> VAR tipo ID PUNTOYCOMA
Rule 5     declaracionesYsentencias -> IF LPAREN expresion RPAREN sentencia
Rule 6     declaracionesYsentencias -> WHILE LPAREN expresion RPAREN LBRACE interiorFuncion RBRACE
Rule 7     declaracionesYsentencias -> sentencia
Rule 8     tipo -> INT
Rule 9     tipo -> STRING
Rule 10    tipo -> BOOLEAN
Rule 11    sentencia -> ID asignacion
Rule 12    sentencia -> RETURN sentenciaReturn PUNTOYCOMA
Rule 13    sentencia -> PRINT LPAREN expresion RPAREN PUNTOYCOMA
Rule 14    sentencia -> INPUT LPAREN ID RPAREN PUNTOYCOMA
Rule 15    sentencia -> ID LPAREN argumentosLlamada RPAREN PUNTOYCOMA
Rule 16    asignacion -> IGUAL expresion PUNTOYCOMA
Rule 17    asignacion -> ORIGUAL expresion PUNTOYCOMA
Rule 18    sentenciaReturn -> expresion
Rule 19    sentenciaReturn -> <empty>
Rule 20    argumentosLlamada -> expresion argumentosLlamadaExtra
Rule 21    argumentosLlamada -> <empty>
Rule 22    argumentosLlamadaExtra -> COMA expresion argumentosLlamadaExtra
Rule 23    argumentosLlamadaExtra -> <empty>
Rule 24    funcion -> FUNCTION declaracionArgumentos ID LPAREN argumentos RPAREN LBRACE interiorFuncion RBRACE
Rule 25    declaracionArgumentos -> tipo
Rule 26    declaracionArgumentos -> <empty>
Rule 27    interiorFuncion -> declaracionesYsentencias interiorFuncion
Rule 28    interiorFuncion -> <empty>
Rule 29    argumentos -> tipo ID argumentosExtra
Rule 30    argumentos -> <empty>
Rule 31    argumentosExtra -> COMA tipo ID argumentosExtra
Rule 32    argumentosExtra -> <empty>
Rule 33    expresion -> expresion OR erre
Rule 34    expresion -> erre
Rule 35    erre -> erre MAYOR uu
Rule 36    erre -> uu
Rule 37    uu -> uu MAS uve
Rule 38    uu -> uve
Rule 39    uve -> ID
Rule 40    uve -> INTEGER
Rule 41    uve -> TRUE
Rule 42    uve -> FALSE
Rule 43    uve -> CADENA
Rule 44    uve -> ID LPAREN argumentosLlamada RPAREN
Rule 45    uve -> LPAREN expresion RPAREN

Terminals, with rules where they appear

BOOLEAN              : 10
CADENA               : 43
COMA                 : 22 31
FALSE                : 42
FUNCTION             : 24
ID                   : 4 11 14 15 24 29 31 39 44
IF                   : 5
IGUAL                : 16
INPUT                : 14
INT                  : 8
INTEGER              : 40
LBRACE               : 6 24
LPAREN               : 5 6 13 14 15 24 44 45
MAS                  : 37
MAYOR                : 35
OR                   : 33
ORIGUAL              : 17
PRINT                : 13
PUNTOYCOMA           : 4 12 13 14 15 16 17
RBRACE               : 6 24
RETURN               : 12
RPAREN               : 5 6 13 14 15 24 44 45
STRING               : 9
TRUE                 : 41
VAR                  : 4
WHILE                : 6
error                : 

Nonterminals, with rules where they appear

argumentos           : 24
argumentosExtra      : 29 31
argumentosLlamada    : 15 44
argumentosLlamadaExtra : 20 22
asignacion           : 11
declaracionArgumentos : 24
declaracionesYsentencias : 1 27
erre                 : 33 34 35
expresion            : 5 6 13 16 17 18 20 22 33 45
funcion              : 2
interiorFuncion      : 6 24 27
program              : 1 2 0
sentencia            : 5 7
sentenciaReturn      : 12
tipo                 : 4 25 29 31
uu                   : 35 36 37
uve                  : 37 38

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declaracionesYsentencias program
    (2) program -> . funcion program
    (3) program -> .
    (4) declaracionesYsentencias -> . VAR tipo ID PUNTOYCOMA
    (5) declaracionesYsentencias -> . IF LPAREN expresion RPAREN sentencia
    (6) declaracionesYsentencias -> . WHILE LPAREN expresion RPAREN LBRACE interiorFuncion RBRACE
    (7) declaracionesYsentencias -> . sentencia
    (24) funcion -> . FUNCTION declaracionArgumentos ID LPAREN argumentos RPAREN LBRACE interiorFuncion RBRACE
    (11) sentencia -> . ID asignacion
    (12) sentencia -> . RETURN sentenciaReturn PUNTOYCOMA
    (13) sentencia -> . PRINT LPAREN expresion RPAREN PUNTOYCOMA
    (14) sentencia -> . INPUT LPAREN ID RPAREN PUNTOYCOMA
    (15) sentencia -> . ID LPAREN argumentosLlamada RPAREN PUNTOYCOMA

    $end            reduce using rule 3 (program -> .)
    VAR             shift and go to state 4
    IF              shift and go to state 6
    WHILE           shift and go to state 8
    FUNCTION        shift and go to state 9
    ID              shift and go to state 5
    RETURN          shift and go to state 10
    PRINT           shift and go to state 11
    INPUT           shift and go to state 12

    program                        shift and go to state 1
    declaracionesYsentencias       shift and go to state 2
    funcion                        shift and go to state 3
    sentencia                      shift and go to state 7

state 1

    (0) S' -> program .



state 2

    (1) program -> declaracionesYsentencias . program
    (1) program -> . declaracionesYsentencias program
    (2) program -> . funcion program
    (3) program -> .
    (4) declaracionesYsentencias -> . VAR tipo ID PUNTOYCOMA
    (5) declaracionesYsentencias -> . IF LPAREN expresion RPAREN sentencia
    (6) declaracionesYsentencias -> . WHILE LPAREN expresion RPAREN LBRACE interiorFuncion RBRACE
    (7) declaracionesYsentencias -> . sentencia
    (24) funcion -> . FUNCTION declaracionArgumentos ID LPAREN argumentos RPAREN LBRACE interiorFuncion RBRACE
    (11) sentencia -> . ID asignacion
    (12) sentencia -> . RETURN sentenciaReturn PUNTOYCOMA
    (13) sentencia -> . PRINT LPAREN expresion RPAREN PUNTOYCOMA
    (14) sentencia -> . INPUT LPAREN ID RPAREN PUNTOYCOMA
    (15) sentencia -> . ID LPAREN argumentosLlamada RPAREN PUNTOYCOMA

    $end            reduce using rule 3 (program -> .)
    VAR             shift and go to state 4
    IF              shift and go to state 6
    WHILE           shift and go to state 8
    FUNCTION        shift and go to state 9
    ID              shift and go to state 5
    RETURN          shift and go to state 10
    PRINT           shift and go to state 11
    INPUT           shift and go to state 12

    declaracionesYsentencias       shift and go to state 2
    program                        shift and go to state 13
    funcion                        shift and go to state 3
    sentencia                      shift and go to state 7

state 3

    (2) program -> funcion . program
    (1) program -> . declaracionesYsentencias program
    (2) program -> . funcion program
    (3) program -> .
    (4) declaracionesYsentencias -> . VAR tipo ID PUNTOYCOMA
    (5) declaracionesYsentencias -> . IF LPAREN expresion RPAREN sentencia
    (6) declaracionesYsentencias -> . WHILE LPAREN expresion RPAREN LBRACE interiorFuncion RBRACE
    (7) declaracionesYsentencias -> . sentencia
    (24) funcion -> . FUNCTION declaracionArgumentos ID LPAREN argumentos RPAREN LBRACE interiorFuncion RBRACE
    (11) sentencia -> . ID asignacion
    (12) sentencia -> . RETURN sentenciaReturn PUNTOYCOMA
    (13) sentencia -> . PRINT LPAREN expresion RPAREN PUNTOYCOMA
    (14) sentencia -> . INPUT LPAREN ID RPAREN PUNTOYCOMA
    (15) sentencia -> . ID LPAREN argumentosLlamada RPAREN PUNTOYCOMA

    $end            reduce using rule 3 (program -> .)
    VAR             shift and go to state 4
    IF              shift and go to state 6
    WHILE           shift and go to state 8
    FUNCTION        shift and go to state 9
    ID              shift and go to state 5
    RETURN          shift and go to state 10
    PRINT           shift and go to state 11
    INPUT           shift and go to state 12

    funcion                        shift and go to state 3
    program                        shift and go to state 14
    declaracionesYsentencias       shift and go to state 2
    sentencia                      shift and go to state 7

state 4

    (4) declaracionesYsentencias -> VAR . tipo ID PUNTOYCOMA
    (8) tipo -> . INT
    (9) tipo -> . STRING
    (10) tipo -> . BOOLEAN

    INT             shift and go to state 16
    STRING          shift and go to state 17
    BOOLEAN         shift and go to state 18

    tipo                           shift and go to state 15

state 5

    (11) sentencia -> ID . asignacion
    (15) sentencia -> ID . LPAREN argumentosLlamada RPAREN PUNTOYCOMA
    (16) asignacion -> . IGUAL expresion PUNTOYCOMA
    (17) asignacion -> . ORIGUAL expresion PUNTOYCOMA

    LPAREN          shift and go to state 20
    IGUAL           shift and go to state 21
    ORIGUAL         shift and go to state 22

    asignacion                     shift and go to state 19

state 6

    (5) declaracionesYsentencias -> IF . LPAREN expresion RPAREN sentencia

    LPAREN          shift and go to state 23


state 7

    (7) declaracionesYsentencias -> sentencia .

    VAR             reduce using rule 7 (declaracionesYsentencias -> sentencia .)
    IF              reduce using rule 7 (declaracionesYsentencias -> sentencia .)
    WHILE           reduce using rule 7 (declaracionesYsentencias -> sentencia .)
    FUNCTION        reduce using rule 7 (declaracionesYsentencias -> sentencia .)
    ID              reduce using rule 7 (declaracionesYsentencias -> sentencia .)
    RETURN          reduce using rule 7 (declaracionesYsentencias -> sentencia .)
    PRINT           reduce using rule 7 (declaracionesYsentencias -> sentencia .)
    INPUT           reduce using rule 7 (declaracionesYsentencias -> sentencia .)
    $end            reduce using rule 7 (declaracionesYsentencias -> sentencia .)
    RBRACE          reduce using rule 7 (declaracionesYsentencias -> sentencia .)


state 8

    (6) declaracionesYsentencias -> WHILE . LPAREN expresion RPAREN LBRACE interiorFuncion RBRACE

    LPAREN          shift and go to state 24


state 9

    (24) funcion -> FUNCTION . declaracionArgumentos ID LPAREN argumentos RPAREN LBRACE interiorFuncion RBRACE
    (25) declaracionArgumentos -> . tipo
    (26) declaracionArgumentos -> .
    (8) tipo -> . INT
    (9) tipo -> . STRING
    (10) tipo -> . BOOLEAN

    ID              reduce using rule 26 (declaracionArgumentos -> .)
    INT             shift and go to state 16
    STRING          shift and go to state 17
    BOOLEAN         shift and go to state 18

    declaracionArgumentos          shift and go to state 25
    tipo                           shift and go to state 26

state 10

    (12) sentencia -> RETURN . sentenciaReturn PUNTOYCOMA
    (18) sentenciaReturn -> . expresion
    (19) sentenciaReturn -> .
    (33) expresion -> . expresion OR erre
    (34) expresion -> . erre
    (35) erre -> . erre MAYOR uu
    (36) erre -> . uu
    (37) uu -> . uu MAS uve
    (38) uu -> . uve
    (39) uve -> . ID
    (40) uve -> . INTEGER
    (41) uve -> . TRUE
    (42) uve -> . FALSE
    (43) uve -> . CADENA
    (44) uve -> . ID LPAREN argumentosLlamada RPAREN
    (45) uve -> . LPAREN expresion RPAREN

    PUNTOYCOMA      reduce using rule 19 (sentenciaReturn -> .)
    ID              shift and go to state 32
    INTEGER         shift and go to state 33
    TRUE            shift and go to state 34
    FALSE           shift and go to state 35
    CADENA          shift and go to state 36
    LPAREN          shift and go to state 37

    sentenciaReturn                shift and go to state 27
    expresion                      shift and go to state 28
    erre                           shift and go to state 29
    uu                             shift and go to state 30
    uve                            shift and go to state 31

state 11

    (13) sentencia -> PRINT . LPAREN expresion RPAREN PUNTOYCOMA

    LPAREN          shift and go to state 38


state 12

    (14) sentencia -> INPUT . LPAREN ID RPAREN PUNTOYCOMA

    LPAREN          shift and go to state 39


state 13

    (1) program -> declaracionesYsentencias program .

    $end            reduce using rule 1 (program -> declaracionesYsentencias program .)


state 14

    (2) program -> funcion program .

    $end            reduce using rule 2 (program -> funcion program .)


state 15

    (4) declaracionesYsentencias -> VAR tipo . ID PUNTOYCOMA

    ID              shift and go to state 40


state 16

    (8) tipo -> INT .

    ID              reduce using rule 8 (tipo -> INT .)


state 17

    (9) tipo -> STRING .

    ID              reduce using rule 9 (tipo -> STRING .)


state 18

    (10) tipo -> BOOLEAN .

    ID              reduce using rule 10 (tipo -> BOOLEAN .)


state 19

    (11) sentencia -> ID asignacion .

    VAR             reduce using rule 11 (sentencia -> ID asignacion .)
    IF              reduce using rule 11 (sentencia -> ID asignacion .)
    WHILE           reduce using rule 11 (sentencia -> ID asignacion .)
    FUNCTION        reduce using rule 11 (sentencia -> ID asignacion .)
    ID              reduce using rule 11 (sentencia -> ID asignacion .)
    RETURN          reduce using rule 11 (sentencia -> ID asignacion .)
    PRINT           reduce using rule 11 (sentencia -> ID asignacion .)
    INPUT           reduce using rule 11 (sentencia -> ID asignacion .)
    $end            reduce using rule 11 (sentencia -> ID asignacion .)
    RBRACE          reduce using rule 11 (sentencia -> ID asignacion .)


state 20

    (15) sentencia -> ID LPAREN . argumentosLlamada RPAREN PUNTOYCOMA
    (20) argumentosLlamada -> . expresion argumentosLlamadaExtra
    (21) argumentosLlamada -> .
    (33) expresion -> . expresion OR erre
    (34) expresion -> . erre
    (35) erre -> . erre MAYOR uu
    (36) erre -> . uu
    (37) uu -> . uu MAS uve
    (38) uu -> . uve
    (39) uve -> . ID
    (40) uve -> . INTEGER
    (41) uve -> . TRUE
    (42) uve -> . FALSE
    (43) uve -> . CADENA
    (44) uve -> . ID LPAREN argumentosLlamada RPAREN
    (45) uve -> . LPAREN expresion RPAREN

    RPAREN          reduce using rule 21 (argumentosLlamada -> .)
    ID              shift and go to state 32
    INTEGER         shift and go to state 33
    TRUE            shift and go to state 34
    FALSE           shift and go to state 35
    CADENA          shift and go to state 36
    LPAREN          shift and go to state 37

    argumentosLlamada              shift and go to state 41
    expresion                      shift and go to state 42
    erre                           shift and go to state 29
    uu                             shift and go to state 30
    uve                            shift and go to state 31

state 21

    (16) asignacion -> IGUAL . expresion PUNTOYCOMA
    (33) expresion -> . expresion OR erre
    (34) expresion -> . erre
    (35) erre -> . erre MAYOR uu
    (36) erre -> . uu
    (37) uu -> . uu MAS uve
    (38) uu -> . uve
    (39) uve -> . ID
    (40) uve -> . INTEGER
    (41) uve -> . TRUE
    (42) uve -> . FALSE
    (43) uve -> . CADENA
    (44) uve -> . ID LPAREN argumentosLlamada RPAREN
    (45) uve -> . LPAREN expresion RPAREN

    ID              shift and go to state 32
    INTEGER         shift and go to state 33
    TRUE            shift and go to state 34
    FALSE           shift and go to state 35
    CADENA          shift and go to state 36
    LPAREN          shift and go to state 37

    expresion                      shift and go to state 43
    erre                           shift and go to state 29
    uu                             shift and go to state 30
    uve                            shift and go to state 31

state 22

    (17) asignacion -> ORIGUAL . expresion PUNTOYCOMA
    (33) expresion -> . expresion OR erre
    (34) expresion -> . erre
    (35) erre -> . erre MAYOR uu
    (36) erre -> . uu
    (37) uu -> . uu MAS uve
    (38) uu -> . uve
    (39) uve -> . ID
    (40) uve -> . INTEGER
    (41) uve -> . TRUE
    (42) uve -> . FALSE
    (43) uve -> . CADENA
    (44) uve -> . ID LPAREN argumentosLlamada RPAREN
    (45) uve -> . LPAREN expresion RPAREN

    ID              shift and go to state 32
    INTEGER         shift and go to state 33
    TRUE            shift and go to state 34
    FALSE           shift and go to state 35
    CADENA          shift and go to state 36
    LPAREN          shift and go to state 37

    expresion                      shift and go to state 44
    erre                           shift and go to state 29
    uu                             shift and go to state 30
    uve                            shift and go to state 31

state 23

    (5) declaracionesYsentencias -> IF LPAREN . expresion RPAREN sentencia
    (33) expresion -> . expresion OR erre
    (34) expresion -> . erre
    (35) erre -> . erre MAYOR uu
    (36) erre -> . uu
    (37) uu -> . uu MAS uve
    (38) uu -> . uve
    (39) uve -> . ID
    (40) uve -> . INTEGER
    (41) uve -> . TRUE
    (42) uve -> . FALSE
    (43) uve -> . CADENA
    (44) uve -> . ID LPAREN argumentosLlamada RPAREN
    (45) uve -> . LPAREN expresion RPAREN

    ID              shift and go to state 32
    INTEGER         shift and go to state 33
    TRUE            shift and go to state 34
    FALSE           shift and go to state 35
    CADENA          shift and go to state 36
    LPAREN          shift and go to state 37

    expresion                      shift and go to state 45
    erre                           shift and go to state 29
    uu                             shift and go to state 30
    uve                            shift and go to state 31

state 24

    (6) declaracionesYsentencias -> WHILE LPAREN . expresion RPAREN LBRACE interiorFuncion RBRACE
    (33) expresion -> . expresion OR erre
    (34) expresion -> . erre
    (35) erre -> . erre MAYOR uu
    (36) erre -> . uu
    (37) uu -> . uu MAS uve
    (38) uu -> . uve
    (39) uve -> . ID
    (40) uve -> . INTEGER
    (41) uve -> . TRUE
    (42) uve -> . FALSE
    (43) uve -> . CADENA
    (44) uve -> . ID LPAREN argumentosLlamada RPAREN
    (45) uve -> . LPAREN expresion RPAREN

    ID              shift and go to state 32
    INTEGER         shift and go to state 33
    TRUE            shift and go to state 34
    FALSE           shift and go to state 35
    CADENA          shift and go to state 36
    LPAREN          shift and go to state 37

    expresion                      shift and go to state 46
    erre                           shift and go to state 29
    uu                             shift and go to state 30
    uve                            shift and go to state 31

state 25

    (24) funcion -> FUNCTION declaracionArgumentos . ID LPAREN argumentos RPAREN LBRACE interiorFuncion RBRACE

    ID              shift and go to state 47


state 26

    (25) declaracionArgumentos -> tipo .

    ID              reduce using rule 25 (declaracionArgumentos -> tipo .)


state 27

    (12) sentencia -> RETURN sentenciaReturn . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 48


state 28

    (18) sentenciaReturn -> expresion .
    (33) expresion -> expresion . OR erre

    PUNTOYCOMA      reduce using rule 18 (sentenciaReturn -> expresion .)
    OR              shift and go to state 49


state 29

    (34) expresion -> erre .
    (35) erre -> erre . MAYOR uu

    OR              reduce using rule 34 (expresion -> erre .)
    PUNTOYCOMA      reduce using rule 34 (expresion -> erre .)
    COMA            reduce using rule 34 (expresion -> erre .)
    RPAREN          reduce using rule 34 (expresion -> erre .)
    MAYOR           shift and go to state 50


state 30

    (36) erre -> uu .
    (37) uu -> uu . MAS uve

    MAYOR           reduce using rule 36 (erre -> uu .)
    OR              reduce using rule 36 (erre -> uu .)
    PUNTOYCOMA      reduce using rule 36 (erre -> uu .)
    COMA            reduce using rule 36 (erre -> uu .)
    RPAREN          reduce using rule 36 (erre -> uu .)
    MAS             shift and go to state 51


state 31

    (38) uu -> uve .

    MAS             reduce using rule 38 (uu -> uve .)
    MAYOR           reduce using rule 38 (uu -> uve .)
    OR              reduce using rule 38 (uu -> uve .)
    PUNTOYCOMA      reduce using rule 38 (uu -> uve .)
    COMA            reduce using rule 38 (uu -> uve .)
    RPAREN          reduce using rule 38 (uu -> uve .)


state 32

    (39) uve -> ID .
    (44) uve -> ID . LPAREN argumentosLlamada RPAREN

    MAS             reduce using rule 39 (uve -> ID .)
    MAYOR           reduce using rule 39 (uve -> ID .)
    OR              reduce using rule 39 (uve -> ID .)
    PUNTOYCOMA      reduce using rule 39 (uve -> ID .)
    COMA            reduce using rule 39 (uve -> ID .)
    RPAREN          reduce using rule 39 (uve -> ID .)
    LPAREN          shift and go to state 52


state 33

    (40) uve -> INTEGER .

    MAS             reduce using rule 40 (uve -> INTEGER .)
    MAYOR           reduce using rule 40 (uve -> INTEGER .)
    OR              reduce using rule 40 (uve -> INTEGER .)
    PUNTOYCOMA      reduce using rule 40 (uve -> INTEGER .)
    COMA            reduce using rule 40 (uve -> INTEGER .)
    RPAREN          reduce using rule 40 (uve -> INTEGER .)


state 34

    (41) uve -> TRUE .

    MAS             reduce using rule 41 (uve -> TRUE .)
    MAYOR           reduce using rule 41 (uve -> TRUE .)
    OR              reduce using rule 41 (uve -> TRUE .)
    PUNTOYCOMA      reduce using rule 41 (uve -> TRUE .)
    COMA            reduce using rule 41 (uve -> TRUE .)
    RPAREN          reduce using rule 41 (uve -> TRUE .)


state 35

    (42) uve -> FALSE .

    MAS             reduce using rule 42 (uve -> FALSE .)
    MAYOR           reduce using rule 42 (uve -> FALSE .)
    OR              reduce using rule 42 (uve -> FALSE .)
    PUNTOYCOMA      reduce using rule 42 (uve -> FALSE .)
    COMA            reduce using rule 42 (uve -> FALSE .)
    RPAREN          reduce using rule 42 (uve -> FALSE .)


state 36

    (43) uve -> CADENA .

    MAS             reduce using rule 43 (uve -> CADENA .)
    MAYOR           reduce using rule 43 (uve -> CADENA .)
    OR              reduce using rule 43 (uve -> CADENA .)
    PUNTOYCOMA      reduce using rule 43 (uve -> CADENA .)
    COMA            reduce using rule 43 (uve -> CADENA .)
    RPAREN          reduce using rule 43 (uve -> CADENA .)


state 37

    (45) uve -> LPAREN . expresion RPAREN
    (33) expresion -> . expresion OR erre
    (34) expresion -> . erre
    (35) erre -> . erre MAYOR uu
    (36) erre -> . uu
    (37) uu -> . uu MAS uve
    (38) uu -> . uve
    (39) uve -> . ID
    (40) uve -> . INTEGER
    (41) uve -> . TRUE
    (42) uve -> . FALSE
    (43) uve -> . CADENA
    (44) uve -> . ID LPAREN argumentosLlamada RPAREN
    (45) uve -> . LPAREN expresion RPAREN

    ID              shift and go to state 32
    INTEGER         shift and go to state 33
    TRUE            shift and go to state 34
    FALSE           shift and go to state 35
    CADENA          shift and go to state 36
    LPAREN          shift and go to state 37

    expresion                      shift and go to state 53
    erre                           shift and go to state 29
    uu                             shift and go to state 30
    uve                            shift and go to state 31

state 38

    (13) sentencia -> PRINT LPAREN . expresion RPAREN PUNTOYCOMA
    (33) expresion -> . expresion OR erre
    (34) expresion -> . erre
    (35) erre -> . erre MAYOR uu
    (36) erre -> . uu
    (37) uu -> . uu MAS uve
    (38) uu -> . uve
    (39) uve -> . ID
    (40) uve -> . INTEGER
    (41) uve -> . TRUE
    (42) uve -> . FALSE
    (43) uve -> . CADENA
    (44) uve -> . ID LPAREN argumentosLlamada RPAREN
    (45) uve -> . LPAREN expresion RPAREN

    ID              shift and go to state 32
    INTEGER         shift and go to state 33
    TRUE            shift and go to state 34
    FALSE           shift and go to state 35
    CADENA          shift and go to state 36
    LPAREN          shift and go to state 37

    expresion                      shift and go to state 54
    erre                           shift and go to state 29
    uu                             shift and go to state 30
    uve                            shift and go to state 31

state 39

    (14) sentencia -> INPUT LPAREN . ID RPAREN PUNTOYCOMA

    ID              shift and go to state 55


state 40

    (4) declaracionesYsentencias -> VAR tipo ID . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 56


state 41

    (15) sentencia -> ID LPAREN argumentosLlamada . RPAREN PUNTOYCOMA

    RPAREN          shift and go to state 57


state 42

    (20) argumentosLlamada -> expresion . argumentosLlamadaExtra
    (33) expresion -> expresion . OR erre
    (22) argumentosLlamadaExtra -> . COMA expresion argumentosLlamadaExtra
    (23) argumentosLlamadaExtra -> .

    OR              shift and go to state 49
    COMA            shift and go to state 59
    RPAREN          reduce using rule 23 (argumentosLlamadaExtra -> .)

    argumentosLlamadaExtra         shift and go to state 58

state 43

    (16) asignacion -> IGUAL expresion . PUNTOYCOMA
    (33) expresion -> expresion . OR erre

    PUNTOYCOMA      shift and go to state 60
    OR              shift and go to state 49


state 44

    (17) asignacion -> ORIGUAL expresion . PUNTOYCOMA
    (33) expresion -> expresion . OR erre

    PUNTOYCOMA      shift and go to state 61
    OR              shift and go to state 49


state 45

    (5) declaracionesYsentencias -> IF LPAREN expresion . RPAREN sentencia
    (33) expresion -> expresion . OR erre

    RPAREN          shift and go to state 62
    OR              shift and go to state 49


state 46

    (6) declaracionesYsentencias -> WHILE LPAREN expresion . RPAREN LBRACE interiorFuncion RBRACE
    (33) expresion -> expresion . OR erre

    RPAREN          shift and go to state 63
    OR              shift and go to state 49


state 47

    (24) funcion -> FUNCTION declaracionArgumentos ID . LPAREN argumentos RPAREN LBRACE interiorFuncion RBRACE

    LPAREN          shift and go to state 64


state 48

    (12) sentencia -> RETURN sentenciaReturn PUNTOYCOMA .

    VAR             reduce using rule 12 (sentencia -> RETURN sentenciaReturn PUNTOYCOMA .)
    IF              reduce using rule 12 (sentencia -> RETURN sentenciaReturn PUNTOYCOMA .)
    WHILE           reduce using rule 12 (sentencia -> RETURN sentenciaReturn PUNTOYCOMA .)
    FUNCTION        reduce using rule 12 (sentencia -> RETURN sentenciaReturn PUNTOYCOMA .)
    ID              reduce using rule 12 (sentencia -> RETURN sentenciaReturn PUNTOYCOMA .)
    RETURN          reduce using rule 12 (sentencia -> RETURN sentenciaReturn PUNTOYCOMA .)
    PRINT           reduce using rule 12 (sentencia -> RETURN sentenciaReturn PUNTOYCOMA .)
    INPUT           reduce using rule 12 (sentencia -> RETURN sentenciaReturn PUNTOYCOMA .)
    $end            reduce using rule 12 (sentencia -> RETURN sentenciaReturn PUNTOYCOMA .)
    RBRACE          reduce using rule 12 (sentencia -> RETURN sentenciaReturn PUNTOYCOMA .)


state 49

    (33) expresion -> expresion OR . erre
    (35) erre -> . erre MAYOR uu
    (36) erre -> . uu
    (37) uu -> . uu MAS uve
    (38) uu -> . uve
    (39) uve -> . ID
    (40) uve -> . INTEGER
    (41) uve -> . TRUE
    (42) uve -> . FALSE
    (43) uve -> . CADENA
    (44) uve -> . ID LPAREN argumentosLlamada RPAREN
    (45) uve -> . LPAREN expresion RPAREN

    ID              shift and go to state 32
    INTEGER         shift and go to state 33
    TRUE            shift and go to state 34
    FALSE           shift and go to state 35
    CADENA          shift and go to state 36
    LPAREN          shift and go to state 37

    erre                           shift and go to state 65
    uu                             shift and go to state 30
    uve                            shift and go to state 31

state 50

    (35) erre -> erre MAYOR . uu
    (37) uu -> . uu MAS uve
    (38) uu -> . uve
    (39) uve -> . ID
    (40) uve -> . INTEGER
    (41) uve -> . TRUE
    (42) uve -> . FALSE
    (43) uve -> . CADENA
    (44) uve -> . ID LPAREN argumentosLlamada RPAREN
    (45) uve -> . LPAREN expresion RPAREN

    ID              shift and go to state 32
    INTEGER         shift and go to state 33
    TRUE            shift and go to state 34
    FALSE           shift and go to state 35
    CADENA          shift and go to state 36
    LPAREN          shift and go to state 37

    uu                             shift and go to state 66
    uve                            shift and go to state 31

state 51

    (37) uu -> uu MAS . uve
    (39) uve -> . ID
    (40) uve -> . INTEGER
    (41) uve -> . TRUE
    (42) uve -> . FALSE
    (43) uve -> . CADENA
    (44) uve -> . ID LPAREN argumentosLlamada RPAREN
    (45) uve -> . LPAREN expresion RPAREN

    ID              shift and go to state 32
    INTEGER         shift and go to state 33
    TRUE            shift and go to state 34
    FALSE           shift and go to state 35
    CADENA          shift and go to state 36
    LPAREN          shift and go to state 37

    uve                            shift and go to state 67

state 52

    (44) uve -> ID LPAREN . argumentosLlamada RPAREN
    (20) argumentosLlamada -> . expresion argumentosLlamadaExtra
    (21) argumentosLlamada -> .
    (33) expresion -> . expresion OR erre
    (34) expresion -> . erre
    (35) erre -> . erre MAYOR uu
    (36) erre -> . uu
    (37) uu -> . uu MAS uve
    (38) uu -> . uve
    (39) uve -> . ID
    (40) uve -> . INTEGER
    (41) uve -> . TRUE
    (42) uve -> . FALSE
    (43) uve -> . CADENA
    (44) uve -> . ID LPAREN argumentosLlamada RPAREN
    (45) uve -> . LPAREN expresion RPAREN

    RPAREN          reduce using rule 21 (argumentosLlamada -> .)
    ID              shift and go to state 32
    INTEGER         shift and go to state 33
    TRUE            shift and go to state 34
    FALSE           shift and go to state 35
    CADENA          shift and go to state 36
    LPAREN          shift and go to state 37

    argumentosLlamada              shift and go to state 68
    expresion                      shift and go to state 42
    erre                           shift and go to state 29
    uu                             shift and go to state 30
    uve                            shift and go to state 31

state 53

    (45) uve -> LPAREN expresion . RPAREN
    (33) expresion -> expresion . OR erre

    RPAREN          shift and go to state 69
    OR              shift and go to state 49


state 54

    (13) sentencia -> PRINT LPAREN expresion . RPAREN PUNTOYCOMA
    (33) expresion -> expresion . OR erre

    RPAREN          shift and go to state 70
    OR              shift and go to state 49


state 55

    (14) sentencia -> INPUT LPAREN ID . RPAREN PUNTOYCOMA

    RPAREN          shift and go to state 71


state 56

    (4) declaracionesYsentencias -> VAR tipo ID PUNTOYCOMA .

    VAR             reduce using rule 4 (declaracionesYsentencias -> VAR tipo ID PUNTOYCOMA .)
    IF              reduce using rule 4 (declaracionesYsentencias -> VAR tipo ID PUNTOYCOMA .)
    WHILE           reduce using rule 4 (declaracionesYsentencias -> VAR tipo ID PUNTOYCOMA .)
    FUNCTION        reduce using rule 4 (declaracionesYsentencias -> VAR tipo ID PUNTOYCOMA .)
    ID              reduce using rule 4 (declaracionesYsentencias -> VAR tipo ID PUNTOYCOMA .)
    RETURN          reduce using rule 4 (declaracionesYsentencias -> VAR tipo ID PUNTOYCOMA .)
    PRINT           reduce using rule 4 (declaracionesYsentencias -> VAR tipo ID PUNTOYCOMA .)
    INPUT           reduce using rule 4 (declaracionesYsentencias -> VAR tipo ID PUNTOYCOMA .)
    $end            reduce using rule 4 (declaracionesYsentencias -> VAR tipo ID PUNTOYCOMA .)
    RBRACE          reduce using rule 4 (declaracionesYsentencias -> VAR tipo ID PUNTOYCOMA .)


state 57

    (15) sentencia -> ID LPAREN argumentosLlamada RPAREN . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 72


state 58

    (20) argumentosLlamada -> expresion argumentosLlamadaExtra .

    RPAREN          reduce using rule 20 (argumentosLlamada -> expresion argumentosLlamadaExtra .)


state 59
